<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->


<!-- MAIN MENU -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout 
    android:id="@+id/screen_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" 
    android:padding="20dp" 
    android:weightSum="1"
    >

<!--     <TextView -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_marginBottom="10dp" -->
<!--         android:background="#d54937" -->
<!--         android:gravity="center" -->
<!--         android:padding="20dp" -->
<!--         android:text="@string/app_name" -->
<!--         android:textColor="#ffffff" -->
<!--         android:textSize="22sp" -->
<!--         android:textStyle="bold" /> -->

<ImageView android:layout_width="wrap_content"
    		android:layout_height="0dip"
    		android:layout_weight="0.7"
    		android:contentDescription="Pong logo"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.25"
            android:orientation="vertical" >

	        <TextView
	            android:id="@+id/hello"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="10dp"
	            style="@style/MediumTextStyle"
	            android:textColor="#FFFFFF"/>
        
             <Button
                android:id="@+id/single_player_button"
                android:text="@string/single_player"
                android:layout_marginTop="10dp" 
                style="@style/ButtonStyle"
                android:textColor="#05F600"
                />
            
             <Button
                android:id="@+id/two_players_button"
                android:layout_marginTop="10dp" 
                android:textColor="#05F600"
                style="@style/ButtonStyle"
                android:text="@string/two_players" />
             
             <Button
                android:id="@+id/two_players_online_button"
                android:layout_marginTop="10dp" 
                style="@style/ButtonStyle"
                android:textColor="#05F600"
                android:text="@string/two_players_online" />   
                
             <Button
                android:id="@+id/invitations_button"
                android:layout_marginTop="10dp" 
                style="@style/ButtonStyle"
                android:textColor="#05F600"
                android:text="@string/invitations" />   			             
             
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/sign_in_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:background="#00FF0000"
            android:layout_weight="0.03"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/sign_in_why"
                style="@style/SmallTextStyle"
                android:textColor="#FFFFFF" />

<!--             <Button -->
<!--                 android:id="@+id/sign_in_button" -->
<!--                 android:layout_width="80dp" -->
<!--                 android:layout_height="30dp" -->
<!--                 android:text="@string/sign_in" -->
<!--                 android:background="@drawable/button" -->
<!--                 style="@style/SmallTextStyle" -->
<!--                 android:textColor="#05F600"/> -->

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

                        
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sign_out_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center|right"
            android:orientation="horizontal"
            android:layout_weight="0.03"
            android:background="#00FF0000">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/you_are_signed_in"
                style="@style/SmallTextStyle"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/sign_out_button"
                android:text="@string/sign_out"
                style="@style/SmallButtonStyle"
                android:textColor="#05F600"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>